--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -3,62 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <title>合众电商管理系统</title>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
-</head>
-<style>
-    .container-fluid{
-        padding: 0px;
-    }
-    #bar{
-        height: 100px;
-        background-color: #5f5f5f;
-        float: left;
-    }
-    #nav{
-        height: 580px;
-        float: left;
-        background-color: #00bbee;
-    }
-     .btn{
-         height: 50px;
-         margin-top: 20px;
-     }
-    #workspace{
-        float: left;
-        height: 580px;
-        border: 0px;
-    }
+    <style>
+        .container-fluid{
+            padding: 0px;
+        }
+        #bar{
+            height: 100px;
+            background-color: #5f5f5f;
+            float: left;
+        }
+        #nav{
+            height: 580px;
+            float: left;
+            background-color: #00bbee;
+        }
+        .btn{
+            height: 50px;
+            margin-top: 20px;
+        }
+        #workspace{
+            float: left;
+            height: 580px;
+            border: 0px;
+        }
 
-    #copyright{
-        background-color: #3c8b3c;
-        height: 100px;
-    }
-    #author{
-        text-align: center;
-        height: 100px;
-        line-height: 100px;
-        color: white;
-        font-size: 20px;
-    }
-</style>
+        #copyright{
+            background-color: #3c8b3c;
+            height: 100px;
+        }
+        #author{
+            text-align: center;
+            height: 100px;
+            line-height: 100px;
+            color: white;
+            font-size: 20px;
+        }
+    </style>
+</head>
 <body>
 <div class="container-fluid">
     <div id="bar" class="col-md-12"></div>
     <div id="nav" class="col-md-2">
-        <button class="btn btn-primary col-md-12">会员管理</button>
-        <button class="btn btn-primary col-md-12">文章管理</button>
-        <button class="btn btn-primary col-md-12">评论管理</button>
-        <button class="btn btn-primary col-md-12">订单管理</button>
-        <button class="btn btn-primary col-md-12">广告管理</button>
-        <button class="btn btn-primary col-md-12">商品管理</button>
-        <button class="btn btn-primary col-md-12">类别管理</button>
-        <button class="btn btn-primary col-md-12">系统设置</button>
+        <button id="articleManager" class="btn btn-primary col-md-12">会员管理</button>
+        <button id="b2" class="btn btn-primary col-md-12">文章管理</button>
+        <button id="b3" class="btn btn-primary col-md-12">评论管理</button>
+        <button id="b4" class="btn btn-primary col-md-12">订单管理</button>
+        <button id="b5" class="btn btn-primary col-md-12">广告管理</button>
+        <button id="b6" class="btn btn-primary col-md-12">商品管理</button>
+        <button id="b7" class="btn btn-primary col-md-12">类别管理</button>
+        <button id="b8" class="btn btn-primary col-md-12">系统设置</button>
     </div>
     <iframe id="workspace"  class="col-md-10" src="http://127.0.0.1/index" frameborder="n"></iframe>
     <div id="copyright" class="col-md-12">
         <div id="author">BY 刘建宇&万领顶&卢芳</div>
     </div>
 </div>
+<script>
+    $("#articleManager").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#b2").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#b3").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#b4").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#b5").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#b6").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#b7").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#b8").click(function (){change("http://127.0.0.1/articleManager")});
 
+    function change(url) {
+        $("#workspace").attr("src",url);
+    }
+
+</script>
 </body>
 </html>
