--- a/src/main/resources/templates/orderManager.html
+++ b/src/main/resources/templates/orderManager.html
@@ -12,13 +12,12 @@
 	<script type="text/javascript">
         $(function(){
             $('#tt').edatagrid({
-                idField:'articleId',
                 rownumbers:true,
                 fitColumns:true,
-                url: '/article/list',
-                saveUrl: '/article/add',
-                updateUrl: '/article/update',
-                destroyUrl: '/article/delete'
+                url: '/order/list',
+                saveUrl: '/order/add',
+                updateUrl: '/order/update',
+                destroyUrl: '/order/delete'
             });
         });
 	</script>
@@ -46,16 +45,18 @@
 	<table id="tt" singleSelect="true">
 		<thead>
 		<tr>
-			<th field="articleId" width="100" editor="{type:'numberbox',options:{required:true}}">索引id</th>
-			<th field="articlePicUrl" width="200" editor="text">文章图片</th>
-			<th field="articleShow" width="100"
-				editor="{type:'validatebox',options:{required:true}}">是否显示
-			</th>
-			<th field="articleTitle" width="100" editor="text">标题</th>
-			<th field="createTime" class="datebox" width="100" editor="text">创建时间</th>
-			<th field="updateTime" class="datebox" width="100" editor="text">修改时间</th>
-			<th field="amountOfReading" width="100" editor="text">阅读量</th>
-			<th field="articleContent" width="100" editor="text">内容</th>
+			<th field="orderId" width="100" editor="{type:'numberbox',options:{required:true}}" required="true">订单索引id</th>
+			<th field="orderSn" width="200" editor="text">订单编号</th>
+			<th field="buyerId" width="100" editor="text">买家id</th>
+			<th field="buyerName" width="100" editor="text">买家姓名</th>
+			<th field="buyerTel" width="100" editor="text">买家的联系电话</th>
+			<th field="addTime" width="100" editor="text">订单生成时间</th>
+			<th field="paymentCode" width="100" editor="text">支付方式名称代码</th>
+			<th field="finnshedTime" width="100" editor="text">订单完成时间</th>
+			<th field="orderAmount" width="100" editor="text">订单总价格</th>
+			<th field="orderState" width="100" editor="text">订单状态</th>
+			<th field="createdTime" width="100" editor="text">createdTime</th>
+			<th field="updatedTime" width="100" editor="text">updatedTime</th>
 		</tr>
 		</thead>
 	</table>
