--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -46,7 +46,7 @@
 <div class="container-fluid">
     <div id="bar" class="col-md-12"></div>
     <div id="nav" class="col-md-2">
-        <button id="articleManager" class="btn btn-primary col-md-12">会员管理</button>
+        <button id="memberManager" class="btn btn-primary col-md-12">会员管理</button>
         <button id="b2" class="btn btn-primary col-md-12">文章管理</button>
         <button id="b3" class="btn btn-primary col-md-12">评论管理</button>
         <button id="b4" class="btn btn-primary col-md-12">订单管理</button>
@@ -61,7 +61,7 @@
     </div>
 </div>
 <script>
-    $("#articleManager").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#memberManager").click(function (){change("http://127.0.0.1/memberManager")});
     $("#b2").click(function (){change("http://127.0.0.1/articleManager")});
     $("#b3").click(function (){change("http://127.0.0.1/articleManager")});
     $("#b4").click(function (){change("http://127.0.0.1/articleManager")});
