--- a/src/main/resources/templates/memberManager.html
+++ b/src/main/resources/templates/memberManager.html
@@ -41,7 +41,18 @@
         <th field="memberId" editor="text"  width="100" >ID</th>
         <th field="memberMobile" width="200" editor="text">手机号</th>
         <th field="memberName" width="100" editor="text">名字</th>
+        <th field="memberBirthday" width="100" editor="text">生日</th>
         <th field="memberPasswd" width="100" editor="text">密码</th>
+        <th field="memberEmail" width="100" editor="text">邮箱</th>
+        <th field="memberWw" width="100" editor="text">微信openid</th>
+        <th field="memberLoginNum" width="100" editor="text">登录次数</th>
+        <th field="createTime" width="100" editor="text">注册时间</th>
+        <th field="memberLoginTime" width="100" editor="text">当前登录时间</th>
+        <th field="memberOldLoginTime" width="100" editor="text">上次登录时间</th>
+        <th field="memberLoginIp" width="100" editor="text">当前登录ip</th>
+        <th field="memberOldLoginIp" width="100" editor="text">上次登录ip</th>
+        <th field="isSell" width="100" editor="text">发布商品权限</th>
+        <th field="memberState" width="100" editor="text">会员开启状态</th>
     </tr>
     </thead>
 </table>
