--- a/src/main/resources/templates/articleManager.html
+++ b/src/main/resources/templates/articleManager.html
@@ -3,63 +3,46 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>jQuery EasyUI</title>
-	<link rel="stylesheet" type="text/css" href="easyui/themes/bootstrap/easyui.css">
+
+	<link rel="stylesheet" type="text/css" href="easyui/themes/default/easyui.css">
 	<link rel="stylesheet" type="text/css" href="easyui/themes/icon.css">
 	<script type="text/javascript" src="easyui/jquery.min.js"></script>
 	<script type="text/javascript" src="easyui/jquery.easyui.min.js"></script>
-	<script type="text/javascript" src="jquery.edatagrid.js"></script>
 	<script type="text/javascript" src="easyui/locale/easyui-lang-zh_CN.js"></script>
-	<script type="text/javascript">
-        $(function(){
-            $('#tt').edatagrid({
-                idField:'articleId',
-                rownumbers:true,
-                fitColumns:true,
-                url: '/article/list',
-                saveUrl: '/article/add',
-                updateUrl: '/article/update',
-                destroyUrl: '/article/delete'
-            });
-        });
-	</script>
-	<style type="text/css">
-		a{
-			width: 50px;
-			height: 30px;
 
-		}
-		#btnbox{
-			height: 40px;
-			padding: 10px;
-		}
-	</style>
+	<script type="text/javascript" src="jquery.edatagrid.js"></script>
+
+	<script type="text/javascript">
+		$(function(){
+			$('#tt').edatagrid({
+                    url: '/articleinfo/list',
+					saveUrl: '/articleinfo/add',
+					updateUrl: '/articleinfo/update',
+					destroyUrl: '/articleinfo/delete'
+			});
+		});
+	</script>
 </head>
 <body>
-<div id="container" class="easyui-layout">
-	<div id="btnbox">
+	<h1>XX管理</h1>
+	<div style="margin-bottom:10px">
 		<a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('addRow')">添加</a>
 		<a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('saveRow')">保存</a>
 		<a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('cancelRow')">取消</a>
 		<a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('destroyRow')">删除</a>
 	</div>
+	<table id="tt" style="width:600px;height:200px"
 
-	<table id="tt" singleSelect="true">
+
+			singleSelect="true">
 		<thead>
-		<tr>
-			<th field="articleId" width="100" editor="{type:'numberbox',options:{required:true}}">索引id</th>
-			<th field="articlePicUrl" width="200" editor="text">文章图片</th>
-			<th field="articleShow" width="100"
-				editor="{type:'validatebox',options:{required:true}}">是否显示
-			</th>
-			<th field="articleTitle" width="100" editor="text">标题</th>
-			<th field="createTime" class="datebox" width="100" editor="text">创建时间</th>
-			<th field="updateTime" class="datebox" width="100" editor="text">修改时间</th>
-			<th field="amountOfReading" width="100" editor="text">阅读量</th>
-			<th field="articleContent" width="100" editor="text">内容</th>
-		</tr>
+			<tr>
+				<th field="memberId" width="100">ID</th>
+				<th field="memberMobile" width="200" editor="text">3213213</th>
+				<th field="memberName" width="100" editor="text">名字</th>
+				<th field="memberPasswd" width="100" editor="text">密码</th>
+			</tr>
 		</thead>
 	</table>
-</div>
-
 </body>
 </html>
