--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -46,33 +46,34 @@
 <div class="container-fluid">
     <div id="bar" class="col-md-12"></div>
     <div id="nav" class="col-md-2">
-        <button id="b1" class="btn btn-primary col-md-12">会员管理</button>
-        <button id="articleManager" class="btn btn-primary col-md-12">文章管理</button>
-        <button id="commentManager" class="btn btn-primary col-md-12">评论管理</button>
-        <button id="order" class="btn btn-primary col-md-12">订单管理</button>
+        <button id="memberManager" class="btn btn-primary col-md-12">会员管理</button>
+        <button id="b2" class="btn btn-primary col-md-12">文章管理</button>
+        <button id="b3" class="btn btn-primary col-md-12">评论管理</button>
+        <button id="b4" class="btn btn-primary col-md-12">订单管理</button>
         <button id="b5" class="btn btn-primary col-md-12">广告管理</button>
         <button id="b6" class="btn btn-primary col-md-12">商品管理</button>
         <button id="b7" class="btn btn-primary col-md-12">类别管理</button>
         <button id="b8" class="btn btn-primary col-md-12">系统设置</button>
     </div>
-    <iframe id="workspace"  class="col-md-10" src="http://127.0.0.1/articleManager" frameborder="n"></iframe>
+    <iframe id="workspace"  class="col-md-10" src="http://127.0.0.1/index" frameborder="n"></iframe>
     <div id="copyright" class="col-md-12">
         <div id="author">BY 刘建宇&万领顶&卢芳</div>
     </div>
 </div>
 <script>
-    $("#b1").click(function (){change("xx")});
-    $("#articleManager").click(function (){change("http://127.0.0.1/articleManager")});
-    $("#commentManager").click(function (){change("http://127.0.0.1/commentManager")});
-    $("#order").click(function (){change("http://127.0.0.1/orderManager")});
-    $("#b5").click(function (){change("xx")});
-    $("#b6").click(function (){change("xx")});
-    $("#b7").click(function (){change("xx")});
-    $("#b8").click(function (){change("xx")});
+    $("#memberManager").click(function (){change("http://127.0.0.1/memberManager")});
+    $("#b2").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#b3").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#b4").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#b5").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#b6").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#b7").click(function (){change("http://127.0.0.1/articleManager")});
+    $("#b8").click(function (){change("http://127.0.0.1/articleManager")});
 
     function change(url) {
         $("#workspace").attr("src",url);
     }
+
 </script>
 </body>
 </html>
