--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,13 +51,13 @@
     <div id="bar" class="col-md-12"></div>
     <div id="nav" class="col-md-2">
         </span><button id="b1" class="btn btn-primary col-md-12"><i class="fa fa-user"></i> 会员管理</button>
-        <button id="articleManager" class="btn btn-primary col-md-12"><i class="fa fa-user"></i> 文章管理</button>
-        <button id="commentManager" class="btn btn-primary col-md-12"><i class="fa fa-user"></i> 评论管理</button>
+        <button id="articleManager" class="btn btn-primary col-md-12"><i class="fa fa-file-text"></i> 文章管理</button>
+        <button id="commentManager" class="btn btn-primary col-md-12"><i class="fa fa-comment"></i> 评论管理</button>
         <button id="order" class="btn btn-primary col-md-12"><i class="fa fa-user"></i> 订单管理</button>
-        <button id="b5" class="btn btn-primary col-md-12"><i class="fa fa-user"></i> 广告管理</button>
-        <button id="b6" class="btn btn-primary col-md-12"><i class="fa fa-user"></i> 商品管理</button>
-        <button id="b7" class="btn btn-primary col-md-12"><i class="fa fa-user"></i> 类别管理</button>
-        <button id="b8" class="btn btn-primary col-md-12"><i class="fa fa-user"></i> 系统设置</button>
+        <button id="b5" class="btn btn-primary col-md-12"><i class="fa fa-picture-o"></i> 广告管理</button>
+        <button id="b6" class="btn btn-primary col-md-12"><i class="fa fa-shopping-bag"></i> 商品管理</button>
+        <button id="b7" class="btn btn-primary col-md-12"><i class="fa fa-filter"></i> 类别管理</button>
+        <button id="b8" class="btn btn-primary col-md-12"><i class="fa fa-cog"></i> 系统设置</button>
     </div>
     <iframe id="workspace"  class="col-md-10" src="http://127.0.0.1/articleManager" frameborder="n"></iframe>
     <div id="copyright" class="col-md-12">
