--- a/src/main/resources/templates/memberManager.html
+++ b/src/main/resources/templates/memberManager.html
@@ -15,44 +15,42 @@
     <script type="text/javascript">
         $(function () {
             $('#tt').edatagrid({
+                idField:'memberId',
                 url: '/memberinfo/pageList',
                 pagination:true,
                 saveUrl: '/memberinfo/saveMember',
                 updateUrl: '',
-                destroyUrl: ''
+                destroyUrl: '/memberinfo/deleteMember'
             });
         });
     </script>
 </head>
 <body>
 <h1>会员管理</h1>
-<div style="margin-bottom:10px">
-    <a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('addRow')">添加</a>
-    <a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('saveRow')">保存</a>
-    <a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('cancelRow')">取消</a>
-    <a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('destroyRow')">删除</a>
+<div id="container" class="easyui-layout">
+    <a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('addRow')"><i class="fa fa-plus"></i> 添加</a>
+    <a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('saveRow')"><i class="fa fa-hdd-o"></i> 保存</a>
+    <a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('cancelRow')"><i class="fa fa-times"></i> 取消</a>
+    <a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('destroyRow')"><i class="fa fa-trash"></i> 删除</a>
 </div>
-<table id="tt" style="width:600px;height:200px"
-
-
-       singleSelect="true">
+<table id="tt"   singleSelect="true">
     <thead>
     <tr>
-        <th field="memberId" editor="text"  width="100" >ID</th>
-        <th field="memberMobile" width="200" editor="text">手机号</th>
-        <th field="memberName" width="100" editor="text">名字</th>
-        <th field="memberBirthday" width="100" editor="text">生日</th>
-        <th field="memberPasswd" width="100" editor="text">密码</th>
-        <th field="memberEmail" width="100" editor="text">邮箱</th>
-        <th field="memberWw" width="100" editor="text">微信openid</th>
-        <th field="memberLoginNum" width="100" editor="text">登录次数</th>
-        <th field="createTime" width="100" editor="text">注册时间</th>
-        <th field="memberLoginTime" width="100" editor="text">当前登录时间</th>
-        <th field="memberOldLoginTime" width="100" editor="text">上次登录时间</th>
-        <th field="memberLoginIp" width="100" editor="text">当前登录ip</th>
-        <th field="memberOldLoginIp" width="100" editor="text">上次登录ip</th>
-        <th field="isSell" width="100" editor="text">发布商品权限</th>
-        <th field="memberState" width="100" editor="text">会员开启状态</th>
+        <th field="memberId" editor="{type:'numberbox',options:{required:true}}"   >ID</th>
+        <th field="memberMobile"  editor="text">手机号</th>
+        <th field="memberName"  editor="text">名字</th>
+        <th field="memberBirthday"  editor="text">生日</th>
+        <th field="memberPasswd"  editor="text">密码</th>
+        <th field="memberEmail"  editor="text">邮箱</th>
+        <th field="memberWw"  editor="text">微信openid</th>
+        <th field="memberLoginNum"  editor="text">登录次数</th>
+        <th field="createTime"  editor="text">注册时间</th>
+        <th field="memberLoginTime"  editor="text">当前登录时间</th>
+        <th field="memberOldLoginTime"  editor="text">上次登录时间</th>
+        <th field="memberLoginIp"  editor="text">当前登录ip</th>
+        <th field="memberOldLoginIp"  editor="text">上次登录ip</th>
+        <th field="isSell"  editor="text">发布商品权限</th>
+        <th field="memberState"  editor="text">会员开启状态</th>
     </tr>
     </thead>
 </table>
