--- a/src/main/resources/templates/memberManager.html
+++ b/src/main/resources/templates/memberManager.html
@@ -19,7 +19,7 @@
                 url: '/memberinfo/pageList',
                 pagination:true,
                 saveUrl: '/memberinfo/saveMember',
-                updateUrl: '',
+                updateUrl: '/memberinfo/saveMember',
                 destroyUrl: '/memberinfo/deleteMember'
             });
         });
@@ -39,16 +39,16 @@
         <th field="memberId" editor="{type:'numberbox',options:{required:true}}"   >ID</th>
         <th field="memberMobile"  editor="text">手机号</th>
         <th field="memberName"  editor="text">名字</th>
-        <th field="memberBirthday"  editor="text">生日</th>
+        <th field="memberBirthday"  >生日</th>
         <th field="memberPasswd"  editor="text">密码</th>
         <th field="memberEmail"  editor="text">邮箱</th>
-        <th field="memberWw"  editor="text">微信openid</th>
-        <th field="memberLoginNum"  editor="text">登录次数</th>
-        <th field="createTime"  editor="text">注册时间</th>
-        <th field="memberLoginTime"  editor="text">当前登录时间</th>
-        <th field="memberOldLoginTime"  editor="text">上次登录时间</th>
-        <th field="memberLoginIp"  editor="text">当前登录ip</th>
-        <th field="memberOldLoginIp"  editor="text">上次登录ip</th>
+        <th field="memberWw"  >微信openid</th>
+        <th field="memberLoginNum"  >登录次数</th>
+        <th field="createTime"  >注册时间</th>
+        <th field="memberLoginTime"  >当前登录时间</th>
+        <th field="memberOldLoginTime"  >上次登录时间</th>
+        <th field="memberLoginIp"  >当前登录ip</th>
+        <th field="memberOldLoginIp"  >上次登录ip</th>
         <th field="isSell"  editor="text">发布商品权限</th>
         <th field="memberState"  editor="text">会员开启状态</th>
     </tr>
