--- a/src/main/resources/templates/memberManager.html
+++ b/src/main/resources/templates/memberManager.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>jQuery EasyUI</title>
+    <title>manager</title>
 
     <link rel="stylesheet" type="text/css" href="easyui/themes/default/easyui.css">
     <link rel="stylesheet" type="text/css" href="easyui/themes/icon.css">
@@ -18,11 +18,15 @@
                 idField:'memberId',
                 url: '/memberinfo/pageList',
                 pagination:true,
+                fitColumns:true,
                 title:"会员管理",
+                toolbar: '#btnbox',
+
                 saveUrl: '/memberinfo/saveMember',
                 updateUrl: '/memberinfo/saveMember',
-                destroyUrl: '/memberinfo/deleteMember'
+                destroyUrl: '/memberinfo/deleteMember',
             });
+            $('#tt').datagrid('reload');
         });
         function sell(value,row,index){
             if(value==1){
@@ -38,6 +42,9 @@
                 return "关闭";
             }
         }
+        function photo(value,row,index){
+            return "<img src='image/"+value+"' width='20' height='20'>";
+        }
 
     </script>
 </head>
@@ -45,13 +52,13 @@
 <h1>会员管理</h1>
 <div id="container" class="easyui-layout">
     <div id="btnbox">
-    <a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('addRow')"><i class="fa fa-plus"></i> 添加</a>
-    <a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('saveRow')"><i class="fa fa-hdd-o"></i> 保存</a>
-    <a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('cancelRow')"><i class="fa fa-times"></i> 取消</a>
-    <a href="#" class="easyui-linkbutton" onclick="javascript:$('#tt').edatagrid('destroyRow')"><i class="fa fa-trash"></i> 删除</a>
+    <a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-add',plain:true" onclick="javascript:$('#tt').edatagrid('addRow')"> 添加</a>
+    <a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-save',plain:true" onclick="javascript:$('#tt').edatagrid('saveRow')"> 保存</a>
+    <a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-undo',plain:true" onclick="javascript:$('#tt').edatagrid('cancelRow')"> 取消</a>
+    <a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-cancel',plain:true"onclick="javascript:$('#tt').edatagrid('destroyRow')"> 删除</a>
     </div>
-</div>
-<table id="tt"   singleSelect="true">
+
+<table id="tt"  width="100%" singleSelect="true">
     <thead>
     <tr>
         <th field="memberId" editor="text"   >ID</th>
@@ -65,12 +72,12 @@
         <th field="createTime"  >注册时间</th>
         <th field="memberLoginTime"  >当前登录时间</th>
         <th field="memberOldLoginTime"  >上次登录时间</th>
-        <th field="memberLoginIp"  >当前登录ip</th>
-        <th field="memberOldLoginIp"  >上次登录ip</th>
         <th field="isSell"  editor="text" formatter="sell">发布商品权限</th>
         <th field="memberState"  editor="text" formatter="state">会员开启状态</th>
+        <th field="memberPic"   formatter="photo">头像</th>
     </tr>
     </thead>
 </table>
+</div>
 </body>
 </html>
