--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>合众电商管理系统</title>
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
         .container-fluid{
             padding: 0px;
@@ -28,6 +29,7 @@
             float: left;
             height: 580px;
             border: 0px;
+            padding: 0px;
         }
 
         #copyright{
@@ -48,6 +50,7 @@
 </head>
 <body>
 <div class="container-fluid">
+
     <div id="bar" class="col-md-12"></div>
     <div id="nav" class="col-md-2">
         </span><button id="b1" class="btn btn-primary col-md-12"><i class="fa fa-user"></i> 会员管理</button>
@@ -59,16 +62,16 @@
         <button id="b7" class="btn btn-primary col-md-12"><i class="fa fa-filter"></i> 类别管理</button>
         <button id="b8" class="btn btn-primary col-md-12"><i class="fa fa-cog"></i> 系统设置</button>
     </div>
-    <iframe id="workspace"  class="col-md-10" src="http://127.0.0.1/articleManager" frameborder="n"></iframe>
+    <iframe id="workspace"  class="col-md-10" src="/articleManager"></iframe>
     <div id="copyright" class="col-md-12">
         <div id="author">BY 刘建宇&万领顶&卢芳</div>
     </div>
 </div>
 <script>
     $("#b1").click(function (){change("xx")});
-    $("#articleManager").click(function (){change("http://127.0.0.1/articleManager")});
-    $("#commentManager").click(function (){change("http://127.0.0.1/commentManager")});
-    $("#order").click(function (){change("http://127.0.0.1/orderManager")});
+    $("#articleManager").click(function (){change("/articleManager")});
+    $("#commentManager").click(function (){change("/commentManager")});
+    $("#order").click(function (){change("/orderManager")});
     $("#b5").click(function (){change("xx")});
     $("#b6").click(function (){change("xx")});
     $("#b7").click(function (){change("xx")});
