--- a/src/main/resources/templates/categoryManager.html
+++ b/src/main/resources/templates/categoryManager.html
@@ -19,8 +19,10 @@
                 url: '/category/pageList',
                 pagination: true,
                 fitColumns: true,
+                scrollbarSize:0,
                 title: "分类管理",
                 toolbar: '#btnbox',
+
 
                 saveUrl: '/category/saveCategory',
                 updateUrl: '/category/saveCategory',
@@ -64,16 +66,16 @@
            onclick="javascript:$('#tt').edatagrid('destroyRow')"> 删除</a>
     </div>
 
-    <table id="tt"  singleSelect="true">
+    <table id="tt"  style="width: 100%" singleSelect="true" >
         <thead>
         <tr>
-            <th field="catId" editor="text">ID</th>
-            <th field="parentId" formatter="level" editor="text">分类等级</th>
-            <th field="catName" editor="text">名字</th>
-            <th field="sort" editor="text" sortable="true">排序</th>
-            <th field="description" editor="text" >描述</th>
-            <th field="isOffline" formatter="offline" editor="text">是否启用</th>
-            <th field="createdTime" >创建时间</th>
+            <th field="catId" width="40" editor="text">ID</th>
+            <th field="parentId" width="40" formatter="level" editor="text">分类等级</th>
+            <th field="catName" width="50" editor="text">名字</th>
+            <th field="sort" width="40" editor="text" sortable="true">排序</th>
+            <th field="description" width="80" editor="text" >描述</th>
+            <th field="isOffline" width="40" formatter="offline" editor="text">是否启用</th>
+            <th field="createdTime" width="80">创建时间</th>
             <th field="updatedTime">更新时间</th>
         </tr>
         </thead>
