--- a/src/main/resources/templates/articleManager.html
+++ b/src/main/resources/templates/articleManager.html
@@ -159,12 +159,12 @@
                     <div class="form-group">
                         <label class="col-sm-1 control-label" >ID:</label>
                         <div class="col-sm-2">
-                            <input name="articleId" id="articleId" type="text" class="form-control">
+                            <input name="articleId" id="articleId" type="number" class="form-control">
                         </div>
 
                         <label class="col-sm-2 control-label">点击量:</label>
                         <div class="col-sm-2">
-                            <input name="amountOfReading" id="amountOfReading" type="text" class="form-control">
+                            <input name="amountOfReading" id="amountOfReading" type="number" class="form-control">
                         </div>
 
                         <label class="col-sm-2 control-label">允许显示:</label>
