--- a/src/main/resources/templates/commentManager.html
+++ b/src/main/resources/templates/commentManager.html
@@ -64,7 +64,7 @@
                 var json=JSON.stringify(ids);
                 $.ajax({
                     type:'post',
-                    url:'http://'+host()+'/comment/remove',
+                    url:host()+'/comment/remove',
                     contentType : 'application/json;charset=utf-8',
                     data : json
                 });
@@ -124,24 +124,24 @@
 						<div class="form-group">
 							<label class="col-sm-1 control-label" >ID:</label>
 							<div class="col-sm-2">
-								<input name="scommId" id="scommId" type="text" class="form-control">
+								<input name="scommId" id="scommId" type="number" class="form-control">
 							</div>
 
 							<label class="col-sm-2 control-label">商品ID:</label>
 							<div class="col-sm-2">
-								<input name="goodisId" id="goodisId" type="text" class="form-control">
+								<input name="goodisId" id="goodisId" type="number" class="form-control">
 							</div>
 
 							<label class="col-sm-2 control-label">会员ID:</label>
 							<div class="col-sm-2">
-								<input name="scommMemberid" id="scommMemberid" type="text" class="form-control">
+								<input name="scommMemberid" id="scommMemberid" type="number" class="form-control">
 							</div>
 						</div>
 
 						<div class="form-group">
 							<label class="col-sm-2 control-label ">评论时间:</label>
 							<div class="col-sm-10">
-								<input name="scommTime" id="scommTime" type="text" class="form-control">
+								<input name="scommTime" id="scommTime" type="date" class="form-control">
 							</div>
 						</div>
 						<div class="form-group">
