--- a/src/main/resources/templates/memberManager.html
+++ b/src/main/resources/templates/memberManager.html
@@ -44,7 +44,7 @@
             }
         }
         function photo(value,row,index){
-            return "<img src='image/"+value+"' width='20' height='20'>";
+            return "<img src='"+value+"' width='20' height='20'>";
         }
 
     </script>
