--- a/src/main/resources/templates/commentManager.html
+++ b/src/main/resources/templates/commentManager.html
@@ -31,6 +31,7 @@
                     $("#form").attr('action',host()+'/comment/update');
                     $("#form")[0].reset();
                     $("#scommId").val(row.scommId);
+                    $("#scommId").attr("readonly",true);
                     $("#goodisId").val(row.goodisId);
                     $("#scommMemberid").val(row.scommMemberid);
                     $("#scommContent").val(row.scommContent);
@@ -75,6 +76,7 @@
             });
             $("#add").click(function () {
                 $("#form")[0].reset();
+                $("#scommId").attr("readonly",false);
                 $("#title").text("添加新纪录");
                 $("#submit").attr('class','btn btn-info');
                 $("#submit").text("添加");
